err/allegra.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Allegra-0.63.egg-info'...
Listing './lib/python3.5/site-packages/allegra'...
Compiling './lib/python3.5/site-packages/allegra/async_chat.py'...
***   File "./lib/python3.5/site-packages/allegra/async_chat.py", line 153
    except socket.error, why:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allegra/async_core.py'...
***   File "./lib/python3.5/site-packages/allegra/async_core.py", line 114
    raise socket.error, err
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allegra/async_limits.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (async_limits.py, line 29)
Compiling './lib/python3.5/site-packages/allegra/async_loop.py'...
***   File "./lib/python3.5/site-packages/allegra/async_loop.py", line 73
    except select.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allegra/async_net.py'...
***   File "./lib/python3.5/site-packages/allegra/async_net.py", line 41
    raise NetstringError, '3 missing comma'
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allegra/finalization.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (finalization.py, line 88)
Compiling './lib/python3.5/site-packages/allegra/loginfo.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (loginfo.py, line 27)
Compiling './lib/python3.5/site-packages/allegra/netstring.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (netstring.py, line 115)
Compiling './lib/python3.5/site-packages/allegra/producer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (producer.py, line 99)
Compiling './lib/python3.5/site-packages/allegra/prompt.py'...
***   File "./lib/python3.5/site-packages/allegra/prompt.py", line 65
    exec co in env
          ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/allegra/reactor.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (reactor.py, line 26)
Compiling './lib/python3.5/site-packages/allegra/select_trigger.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (select_trigger.py, line 184)
Compiling './lib/python3.5/site-packages/allegra/sync_stdio.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (sync_stdio.py, line 37)
Compiling './lib/python3.5/site-packages/allegra/synchronized.py'...
***   File "./lib/python3.5/site-packages/allegra/synchronized.py", line 153
    except Exception, error:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allegra/thread_loop.py'...
***   File "./lib/python3.5/site-packages/allegra/thread_loop.py", line 38
    raise IndexError, 'trunked deque'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/allegra/timeouts.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (timeouts.py, line 33)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
